Update for Java 17